# insurance-data-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: states.py
data/synthetic/: archetypes_claims.py  archetypes_underwriting.py  generator.py  validator.py
docs/: DATA_GEN_GUIDE.md  DECISION_LOG.md  FEATURE_STORE_GUIDE.md  LOCAL_SETUP.md  TROUBLESHOOTING.md
entities/: __init__.py  entity_address.py  entity_person.py  entity_phone.py  entity_policy.py  entity_vehicle.py
features/: feature_definitions.py  feature_store_client.py  online_serving.py
graph/: graph_builder.py  graph_features.py
monitoring/: psi_drift.py
pipeline/: offline_pipeline.py
