[project]
name = "insurance-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.0.0",
    "neo4j>=6.0.0",
    "numpy>=2.0.0",
    "pandas>=3.0.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "redis>=7.0.0",
    "scikit-learn>=1.5.0",
]
